Attribute search does not show attributes from instances #86282

Closed
opened 2021-03-04 18:33:51 +01:00 by kursad k · 16 comments
Member

System Information
Operating system: Windows 10 x64

Blender Version
Broken: blender-2.93.0-e4a55b46c406-windows64

Short description of error
It seems like the Object info node ignores the objects attributes

Exact steps for others to reproduce the error
Load the attached file and check the "Icosphere" that is selected in the Object Info node, you will see it ignores existing attributes blocks

blender_eAtjmBuQ6e.jpg

del.blend

**System Information** Operating system: Windows 10 x64 **Blender Version** Broken: blender-2.93.0-e4a55b46c406-windows64 **Short description of error** It seems like the Object info node ignores the objects attributes **Exact steps for others to reproduce the error** Load the attached file and check the "Icosphere" that is selected in the Object Info node, you will see it ignores existing attributes blocks ![blender_eAtjmBuQ6e.jpg](https://archive.blender.org/developer/F9866619/blender_eAtjmBuQ6e.jpg) [del.blend](https://archive.blender.org/developer/F9866649/del.blend)
Author
Member

Added subscriber: @kursadk

Added subscriber: @kursadk

#86420 was marked as duplicate of this issue

#86420 was marked as duplicate of this issue
Member

Added subscribers: @JacquesLucke, @HooglyBoogly

Added subscribers: @JacquesLucke, @HooglyBoogly
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report. This is because the object info node creates an instance, and the list doesn't gather attribute names from instances. I can see why this is confusing though, because there's no real distinction between instances and other objects in the node tree.

@JacquesLucke Do you think we should gather attribute info from instances too, or leave this as a known issue?

Thanks for the report. This is because the object info node creates an instance, and the list doesn't gather attribute names from instances. I can see why this is confusing though, because there's no real distinction between instances and other objects in the node tree. @JacquesLucke Do you think we should gather attribute info from instances too, or leave this as a known issue?
Author
Member

@HooglyBoogly

One of the use cases of bringing existing attributes is being able to delete/remove points based on some attributeby using the point seperate. I definetey think this will be one of the important uses.

@HooglyBoogly One of the use cases of bringing existing attributes is being able to delete/remove points based on some attributeby using the point seperate. I definetey think this will be one of the important uses.
Member

Hm, we could try and see how it goes. If we add some upper bound on how many instances are checked, this might be fine.

The other problem one might run into (based on the screenshot) is that the Attribute Randomize node is never evaluated when it is not connected to the output.

Hm, we could try and see how it goes. If we add some upper bound on how many instances are checked, this might be fine. The other problem one might run into (based on the screenshot) is that the Attribute Randomize node is never evaluated when it is not connected to the output.
Author
Member

@JacquesLucke

The node is not connected because I attached the other one, connecting it does not make a difference in this case.

@JacquesLucke The node is not connected because I attached the other one, connecting it does not make a difference in this case.
Member

Right, it would make a difference with the changes we're talking about though.

Right, it would make a difference with the changes we're talking about though.
Member

Added subscriber: @dodododorian

Added subscriber: @dodododorian
Hans Goudey changed title from Object Info node does not bring attributes like vertex groups to Attribute search does not show attributes from instances 2021-03-13 22:08:25 +01:00

Added subscriber: @dfelinto

Added subscriber: @dfelinto

Confirmed bugs need to be tagged to one of the modules to show in the queries.

Confirmed bugs need to be tagged to one of the modules to show in the queries.

I used the wrong option when setting Nodes & Physics projects. I didn't mean to remove BF Blender and the Geomtry Nodes projects.

I used the wrong option when setting Nodes & Physics projects. I didn't mean to remove BF Blender and the Geomtry Nodes projects.
Member

Since this was more of a missing feature, I'm changing the type to a TODO.

Since this was more of a missing feature, I'm changing the type to a TODO.
Hans Goudey self-assigned this 2021-04-08 00:47:45 +02:00

This issue was referenced by 1ec9ac2016

This issue was referenced by 1ec9ac201652be6031379e39e98e7dd9dc4a2375
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86282
No description provided.